--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "cli"
   ],
   "author": "Bran van der Meer <branmovic@gmail.com> (http://bran.name/)",
-  "license": "CC-BY-4.0",
+  "licenses": {
+    "type": "CC-BY-4.0",
+    "url": "http://creativecommons.org/licenses/by/4.0/"
+  },
   "bugs": {
     "url": "https://github.com/branneman/frntndr-npm/issues"
   },
-  "homepage": "https://github.com/branneman/frntndr-npm"
+  "homepage": "https://github.com/branneman/frntndr-npm",
+  "dependencies": {
+    "adm-zip": "~0.4.4"
+  }
 }
