--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frntndr",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "frntndr cli tool",
   "main": "bin/frntndr",
   "repository": {
@@ -21,15 +21,14 @@
   },
   "homepage": "https://github.com/branneman/frntndr-npm",
   "bin": {
-    "frntndr": "bin/frntndr"
+    "frntndr": "bin/frntndr.js"
   },
   "preferGlobal": true,
   "dependencies": {
-    "minimist": "0.0.5",
-    "colors": "~0.6.2",
-    "glob": "~3.2.8",
-    "async": "~0.2.10",
-    "git-node": "~0.1.1",
-    "adm-zip": "~0.4.4"
+    "async": "^0.9.0",
+    "colors": "^0.6.2",
+    "fs-exists-in-path": "^1.0.0",
+    "minimist": "^0.1.0",
+    "rimraf": "^2.2.8"
   }
 }
